# mx-sdk-rs-0.30.0-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  publish.sh  vm-test-build-copy.sh
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/examples/adder/: Cargo.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/crowdfunding-dct/: Cargo.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/digital-cash/: Cargo.toml
contracts/examples/empty/: Cargo.toml
contracts/examples/erdjs-snippets/: devnet.session.json  (+2 more)
contracts/experimental/multisig-external-view/: Cargo.toml
contracts/experimental/multisig-external-view/meta/: Cargo.toml
contracts/experimental/multisig-external-view/src/: multisig_external_view.rs
contracts/experimental/multisig-external-view/wasm-view/: Cargo.toml
contracts/feature-tests/alloc-features/: Cargo.toml
contracts/feature-tests/alloc-features/meta/: Cargo.toml
contracts/feature-tests/alloc-features/src/: echo_alloc.rs  echo_managed_alloc.rs  storage_direct_store_alloc.rs
contracts/feature-tests/alloc-features/wasm/: Cargo.toml
contracts/feature-tests/multi-contract-features/: Cargo.toml
contracts/feature-tests/multi-contract-features/meta/: Cargo.toml
contracts/feature-tests/multi-contract-features/wasm-view/: Cargo.toml
denali/: Cargo.toml
dharitri-codec/: Cargo.toml
dharitri-codec-derive/: Cargo.toml
dharitri-codec/src/: lib.rs
dharitri-wasm/: Cargo.toml
dharitri-wasm-debug/: Cargo.toml
dharitri-wasm-debug/src/: denali_rs_runner.rs  display_util.rs
dharitri-wasm-debug/tests/: derive_managed_vec_item_biguint_test.rs  derive_managed_vec_item_dct_token_payment_test.rs  managed_token_identifier_test.rs  managed_type_debug_test.rs  sample_adder.rs  test_print_api.rs
dharitri-wasm-derive/: Cargo.toml
dharitri-wasm-modules/: Cargo.toml
dharitri-wasm-modules/src/: dct.rs  lib.rs  users.rs
dharitri-wasm-node/: Cargo.toml
dharitri-wasm-output/: Cargo.toml
dharitri-wasm/src/: err_msg.rs  lib.rs  macros.rs
dharitri-wasm/src/api/: blockchain_api.rs  call_value_api.rs  send_api.rs
dharitri-wasm/src/api/uncallable/: blockchain_api_uncallable.rs  call_value_api_uncallable.rs  send_api_uncallable.rs
dharitri-wasm/src/contract_base/wrappers/: blockchain_wrapper.rs  call_value_wrapper.rs  send_wrapper.rs
dharitri-wasm/src/formatter/: format_receiver.rs
dharitri-wasm/src/hex_call_data/: cd_de.rs  cd_ser.rs
dharitri-wasm/src/io/: arg_de_input.rs  dyn_arg.rs  dyn_arg_input_endpoint.rs  finish.rs  macro_helpers.rs
dharitri-wasm/src/storage/: storage_get.rs
dharitri-wasm/src/storage/mappers/: fungible_token_mapper.rs  linked_list_mapper.rs  map_mapper.rs  non_fungible_token_mapper.rs  queue_mapper.rs  set_mapper.rs  single_value_mapper.rs  unordered_set_mapper.rs  user_mapper.rs  vec_mapper.rs
dharitri-wasm/src/types/flags/: code_metadata.rs  dct_local_role.rs  dct_local_role_flags.rs  dct_token_type.rs
dharitri-wasm/src/types/heap/: async_call_result.rs
dharitri-wasm/src/types/interaction/: arg_buffer_managed.rs  callback_closure.rs  callback_closure_unmanaged_args.rs  contract_call.rs  contract_deploy.rs
dharitri-wasm/src/types/io/: operation_completion_status.rs  sc_error_managed.rs  sc_error_static.rs  sc_result.rs
dharitri-wasm/src/types/managed/basic/: big_int.rs  big_uint.rs  managed_buffer.rs
dharitri-wasm/src/types/managed/multi_value/: async_call_result_managed.rs  dct_token_payment_multi_arg.rs  multi_value_encoded.rs  multi_value_encoded_iter.rs  multi_value_managed_vec.rs  multi_value_managed_vec_counted.rs
dharitri-wasm/src/types/managed/wrapped/: dct_token_data.rs  managed_address.rs  managed_buffer_cached_builder.rs  managed_byte_array.rs  token_identifier.rs
tools/erdpy-snippet-generator/: Cargo.toml
(+349 files in other folders)
