[package]
name = "dharitri-wasm"
version = "0.4.6"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri Network <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-new"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly smart contract API"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
cb_closure_unmanaged_deser = []
alloc = ["dharitri-codec/alloc"]
ei-1-1 = []

[dependencies]
wee_alloc = "0.4"
hashbrown = "0.11.2"
hex-literal = "0.3.1"
bitflags = "1.3.2"
# git-version = "0.3.5"

[dependencies.dharitri-wasm-derive]
version = "=0.4.6"
path = "../dharitri-wasm-derive"

[dependencies.dharitri-codec]
version = "=0.1.7"
path = "../dharitri-codec"
features = ["derive"]
