[package]
name = "multisig-external-view"
version = "1.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/multisig_external_view.rs"

[dependencies.dharitri-wasm]
version = "0.4.6"
path = "../../../dharitri-wasm"
features = ["ei-1-1"]

[dev-dependencies.dharitri-wasm-debug]
version = "0.4.6"
path = "../../../dharitri-wasm-debug"
features = ["ei-1-1"]

[dev-dependencies.adder]
path = "../../examples/adder"

[dev-dependencies.factorial]
path = "../../examples/factorial"
