[package]
name = "alloc-features"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/alloc_features_main.rs"

[dependencies.dharitri-wasm]
version = "0.4.6"
path = "../../../dharitri-wasm"
features = [ "alloc", "ei-1-1" ]

[dev-dependencies.dharitri-wasm-debug]
version = "0.4.6"
path = "../../../dharitri-wasm-debug"
features = ["ei-1-1"]

[dependencies.dharitri-wasm-modules]
version = "0.4.6"
path = "../../../dharitri-wasm-modules"

[dev-dependencies.dct-system-sc-mock]
path = "../dct-system-sc-mock"
